--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                             <h2><i class="fas fa-school"></i> formation</h2>
                             <div class="items">
                                 <i class="fas fa-dot-circle"></i>
-                                <p class="date">2019-2020 , Rouen</p>
-                                <div>
+                                <p class="date">2019-2020</br>Rouen</p>
+                                <div class="itemsContent">
                                     <h3 class="school">openclassrooms , udemy</h3>
                                     <p class="cursus">developpement web</p>
                                     <p>html , css , javascript , wordpress , apprendre a apprendre ...</p>
@@ -92,7 +92,7 @@
                             <div class="items">
                                 <i class="fas fa-circle"></i>
                                 <p class="date">2014-2016</p>
-                                <div>
+                                <div class="itemsContent">
                                     <h3 class="school">cnam</h3>
                                     <p class="cursus">cc06/cpn22</p>
                                     <p>droit , management , marketing , gestion , comptabilité , ressources humaines ...</p>
@@ -105,7 +105,7 @@
                             <div class="items">
                                 <i class="fas fa-dot-circle"></i>
                                 <p class="date">2016-2018</p>
-                                <div>
+                                <div class="itemsContent">
                                     <h3 class="industry">IPC</h3>
                                     <p class="job">technico commercial</p>
                                     <p>phoning , formation , developpement d'affaire , prospection , vente ...</p>
@@ -114,7 +114,7 @@
                             <div class="items">
                                 <i class="fas fa-circle"></i>
                                 <p class="date">2012-2013</p>
-                                <div>
+                                <div class="itemsContent">
                                     <h3 class="industry">aerolia(airbus)</h3>
                                     <p class="job">technicien/riveteur cellule aéronef</p>
                                     <p>diverses missions de la reception des pièces à l'assemblage des différentes parties sur cellule aéronef (A320/A330/A340</p>
@@ -123,7 +123,7 @@
                             <div class="items">
                                 <i class="fas fa-circle"></i>
                                 <p class="date">date</p>
-                                <div>
+                                <div class="itemsContent">
                                     <h3 class="industry">entreprise</h3>
                                     <p class="job">metier</p>
                                     <p>blabla</p>
