add recommendation section

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <main>
                     <aside>
                         
-                        <section class="container ">
+                        <section class="asideContainerBlock">
                             <h2>contact</h2>
                             <ul id="contact">
                                 <li>
-                                    <p><span class="dot"></span> adresse</p>
+                                    <p>adresse</p>
                                     <p>paris, france</p>
                                 </li>
                                 <li>
@@ -57,13 +57,13 @@
                             </ul>
                         </section>
 
-                        <section class="container">
+                        <section class="asideContainerBlock">
                             <h2>à propos de moi</h2>
                             <p id="about">Lorem ipsum dolor sit amet consectetur, adipisicing ept. Rem recusandae esse, reiciendis cupiditate simipque molestiae minima voluptate eveniet, corrupti laudantium magni ipsam, officiis excepturi aut in soluta exppcabo quod corporis.Veniam rem rerum recusandae tempora tenetur! Id atque minus nesciunt quidem deleniti molptia saepe apquam animi necessitatibus harum exercitationem accusantium eius perspiciatis quod architecto, nihil nobis, deserunt totam consequuntur. Odio.
                             </p>
                         </section>
 
-                        <section class="container">
+                        <section class="asideContainerBlock">
                             <h2>loisirs</h2>
                             <div id="entertainContainer">
                                 <i class="fas fa-gamepad"></i>
@@ -82,8 +82,8 @@
                             <h2><i class="fas fa-school"></i> formation</h2>
                             <div class="items">
                                 <i class="fas fa-dot-circle"></i>
-                                <p class="date">2019-2020</br>Rouen</p>
-                                <div class="itemsContent">
+                                <p class="date">2019-2020 , Rouen</p>
+                                <div>
                                     <h3 class="school">openclassrooms , udemy</h3>
                                     <p class="cursus">developpement web</p>
                                     <p>html , css , javascript , wordpress , apprendre a apprendre ...</p>
@@ -92,7 +92,7 @@
                             <div class="items">
                                 <i class="fas fa-circle"></i>
                                 <p class="date">2014-2016</p>
-                                <div class="itemsContent">
+                                <div>
                                     <h3 class="school">cnam</h3>
                                     <p class="cursus">cc06/cpn22</p>
                                     <p>droit , management , marketing , gestion , comptabilité , ressources humaines ...</p>
@@ -105,7 +105,7 @@
                             <div class="items">
                                 <i class="fas fa-dot-circle"></i>
                                 <p class="date">2016-2018</p>
-                                <div class="itemsContent">
+                                <div>
                                     <h3 class="industry">IPC</h3>
                                     <p class="job">technico commercial</p>
                                     <p>phoning , formation , developpement d'affaire , prospection , vente ...</p>
@@ -114,7 +114,7 @@
                             <div class="items">
                                 <i class="fas fa-circle"></i>
                                 <p class="date">2012-2013</p>
-                                <div class="itemsContent">
+                                <div>
                                     <h3 class="industry">aerolia(airbus)</h3>
                                     <p class="job">technicien/riveteur cellule aéronef</p>
                                     <p>diverses missions de la reception des pièces à l'assemblage des différentes parties sur cellule aéronef (A320/A330/A340</p>
@@ -122,17 +122,31 @@
                             </div>
                             <div class="items">
                                 <i class="fas fa-circle"></i>
-                                <p class="date">date</p>
-                                <div class="itemsContent">
-                                    <h3 class="industry">entreprise</h3>
-                                    <p class="job">metier</p>
-                                    <p>blabla</p>
+                                <p class="date">2010-2012</p>
+                                <div>
+                                    <h3 class="industry">Bowling de picardie</h3>
+                                    <p class="job">technicien de maintenance</p>
+                                    <p>maintenance préventive, maintenance corrective, informatique</p>
                                 </div>
                             </div>
                         </section>
 
                         <section id="recommendation">
-                            <h2><i class="fas fa-pencil-alt"></i> recommandations</h2>
+                            <h2><i class="fas fa-pencil-alt"></i>recommandations</h2>
+                            <div class="recommendationContainerFlex">
+                                <div class="recommendation">
+                                    <h4 class="name">mathieu nebra</h4>
+                                    <p class="job">co-founder Openclassrooms</p>
+                                    <p class="phone"><a href="tel:+147700843">01 47 70 08 43</a></p>
+                                    <p class="mail"><a href="mailto:m.nebra@openclassrooms.com">m.nebra@openclassrooms.com</a></p>
+                                </div>
+                                <div class="recommendation">
+                                    <h4 class="name">emmanuel macron</h4>
+                                    <p class="job">président de la république</p>
+                                    <p class="phone"><a href="tel:+142928100">01 42 92 81 00</a></p>
+                                    <p class="mail"><a href="mailto:e.macron@gouv.fr">e.macron@gouv.fr</a></p>
+                                </div>
+                            </div>
                         </section>
 
                     </div>
