css for screen >768px & Html class

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <div class="items">
                                 <i class="fas fa-dot-circle"></i>
                                 <p class="date">2019-2020 , Rouen</p>
-                                <div>
+                                <div class="itemsContent">
                                     <h3 class="school">openclassrooms , udemy</h3>
                                     <p class="cursus">developpement web</p>
                                     <p>html , css , javascript , wordpress , apprendre a apprendre ...</p>
@@ -92,7 +92,7 @@
                             <div class="items">
                                 <i class="fas fa-circle"></i>
                                 <p class="date">2014-2016</p>
-                                <div>
+                                <div class="itemsContent">
                                     <h3 class="school">cnam</h3>
                                     <p class="cursus">cc06/cpn22</p>
                                     <p>droit , management , marketing , gestion , comptabilité , ressources humaines ...</p>
@@ -105,7 +105,7 @@
                             <div class="items">
                                 <i class="fas fa-dot-circle"></i>
                                 <p class="date">2016-2018</p>
-                                <div>
+                                <div class="itemsContent">
                                     <h3 class="industry">IPC</h3>
                                     <p class="job">technico commercial</p>
                                     <p>phoning , formation , developpement d'affaire , prospection , vente ...</p>
@@ -114,7 +114,7 @@
                             <div class="items">
                                 <i class="fas fa-circle"></i>
                                 <p class="date">2012-2013</p>
-                                <div>
+                                <div class="itemsContent">
                                     <h3 class="industry">aerolia(airbus)</h3>
                                     <p class="job">technicien/riveteur cellule aéronef</p>
                                     <p>diverses missions de la reception des pièces à l'assemblage des différentes parties sur cellule aéronef (A320/A330/A340</p>
@@ -123,7 +123,7 @@
                             <div class="items">
                                 <i class="fas fa-circle"></i>
                                 <p class="date">2010-2012</p>
-                                <div>
+                                <div class="itemsContent">
                                     <h3 class="industry">Bowling de picardie</h3>
                                     <p class="job">technicien de maintenance</p>
                                     <p>maintenance préventive, maintenance corrective, informatique</p>
@@ -137,14 +137,14 @@
                                 <div class="recommendation">
                                     <h4 class="name">mathieu nebra</h4>
                                     <p class="job">co-founder Openclassrooms</p>
-                                    <p class="phone"><a href="tel:+147700843">01 47 70 08 43</a></p>
-                                    <p class="mail"><a href="mailto:m.nebra@openclassrooms.com">m.nebra@openclassrooms.com</a></p>
+                                    <p class="phone">Téléphone : <a href="tel:+147700843">01 47 70 08 43</a></p>
+                                    <p class="mail">E-mail : <a href="mailto:m.nebra@openclassrooms.com">m.nebra@openclassrooms.com</a></p>
                                 </div>
                                 <div class="recommendation">
                                     <h4 class="name">emmanuel macron</h4>
                                     <p class="job">président de la république</p>
-                                    <p class="phone"><a href="tel:+142928100">01 42 92 81 00</a></p>
-                                    <p class="mail"><a href="mailto:e.macron@gouv.fr">e.macron@gouv.fr</a></p>
+                                    <p class="phone">Téléphone : <a href="tel:+142928100">01 42 92 81 00</a></p>
+                                    <p class="mail">E-mail : <a href="mailto:e.macron@gouv.fr">e.macron@gouv.fr</a></p>
                                 </div>
                             </div>
                         </section>
