html class & css for screen under 768px

--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
                             <h2>contact</h2>
                             <ul id="contact">
                                 <li>
-                                    <p>adresse</p>
+                                    <p>adresse :</p>
                                     <p>paris, france</p>
                                 </li>
                                 <li>
-                                    <p>téléphone</p>
+                                    <p>téléphone :</p>
                                     <p><a href="tel:+669607879">06 69 60 78 79</a></p>
                                 </li>
                                 <li>
-                                    <p>e-mail</p>
+                                    <p>e-mail :</p>
                                     <p><a href="mailto:jeambel.w@gmail.com">jeambel.w@gmail.com</a></p>
                                 </li>
                                 <li>
-                                    <p>site web</p>
+                                    <p>site web :</p>
                                     <p><a href="https://www.openclassrooms.com">www.openclassrooms.com</a></p>
                                 </li>
                                 <li>
-                                    <p>linkedin,</p>
+                                    <p>linkedin :</p>
                                     <p><a href="https://www.pnkedin.com/in/wilfried-jeambel-925093121">@wilfried_jeambel</a></p>
                                 </li>
                             </ul>
@@ -82,7 +82,7 @@
                             <h2><i class="fas fa-school"></i> formation</h2>
                             <div class="items">
                                 <i class="fas fa-dot-circle"></i>
-                                <p class="date">2019-2020 , Rouen</p>
+                                <p class="date">2019-2020</br>Rouen</p>
                                 <div class="itemsContent">
                                     <h3 class="school">openclassrooms , udemy</h3>
                                     <p class="cursus">developpement web</p>
