html modification and creation of class and date container,css under 600px adaptative

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <body>
 
-            <article id="tp2">
+            <div id="tp2">
 
         <!-- Partie Header photo plus titre-->
                 <header>
@@ -22,13 +22,13 @@
                     </aside>
                     <section id="Title-header">
                         <h1><span>wilfried</span> jeambel</h1>
-                        <p><span>appre</span>nti developpeur web</p>
+                        <p><span>dével</span>oppeur web freelance</p>
                     </section>
                 </header>
         <!-- End -->
 
-        <!--Partie aside-->
-                <main>
+        <main>
+        <!--Left part-->
                     <aside>
                         
                         <section class="asideContainerBlock">
@@ -59,7 +59,12 @@
 
                         <section class="asideContainerBlock">
                             <h2>à propos de moi</h2>
-                            <p id="about">Lorem ipsum dolor sit amet consectetur, adipisicing ept. Rem recusandae esse, reiciendis cupiditate simipque molestiae minima voluptate eveniet, corrupti laudantium magni ipsam, officiis excepturi aut in soluta exppcabo quod corporis.Veniam rem rerum recusandae tempora tenetur! Id atque minus nesciunt quidem deleniti molptia saepe apquam animi necessitatibus harum exercitationem accusantium eius perspiciatis quod architecto, nihil nobis, deserunt totam consequuntur. Odio.
+                            <p class="about">Véritable passionné des nouvelles technologies et des voyages autours du monde, j'aime apprendre de nouvelles choses et découvrir d'autres façons de penser.
+                            mon inspiration ? ce sont les personnes que je rencontre.
+                            Le développement web représente l'occasion de faire découvrir mon univers au travers de projets passionants.
+                            </p>
+                            <p class="about">
+                                vous souhaitez un site au design unique s'adaptant à tous les écrans ? N'hesitez plus ,contactez moi
                             </p>
                         </section>
 
@@ -73,16 +78,18 @@
                         </section>
 
                     </aside>
-                <!-- End -->
+        <!-- End -->
 
-                <!--partie main-->
-                    <div id="main">
+        <!--right part-->
+                    <div id="rightSide">
 
                         <section id="cursus">
                             <h2><i class="fas fa-school"></i> formation</h2>
                             <div class="items">
-                                <i class="fas fa-dot-circle"></i>
-                                <p class="date">2019-2020</br>Rouen</p>
+                                <div class="itemsDate">
+                                    <i class="fas fa-dot-circle"></i>
+                                    <p class="date">2019-2020<br>Rouen</p>
+                                </div>
                                 <div class="itemsContent">
                                     <h3 class="school">openclassrooms , udemy</h3>
                                     <p class="cursus">developpement web</p>
@@ -90,8 +97,10 @@
                                 </div>
                             </div>
                             <div class="items">
-                                <i class="fas fa-circle"></i>
-                                <p class="date">2014-2016</p>
+                                <div class="itemsDate">
+                                    <i class="fas fa-circle"></i>
+                                    <p class="date">2014-2016</p>
+                                </div>
                                 <div class="itemsContent">
                                     <h3 class="school">cnam</h3>
                                     <p class="cursus">cc06/cpn22</p>
@@ -103,8 +112,21 @@
                         <section id="experience">
                             <h2><i class="fas fa-briefcase"></i> expérience professionnelle</h2>
                             <div class="items">
-                                <i class="fas fa-dot-circle"></i>
-                                <p class="date">2016-2018</p>
+                                <div class="itemsDate">
+                                    <i class="fas fa-dot-circle"></i>
+                                    <p class="date">2020</p>
+                                </div>
+                                <div class="itemsContent">
+                                    <h3 class="industry">jumble web edit</h3>
+                                    <p class="job">développeur web</p>
+                                    <p>Je vous propose la réalisation de sites web s'adaptant à tout type d'écrans, de l'ordinateur au smartphone via une interface agréable.Vous souhaitez un blog ? Un site vitrine ? d'entreprise ou de commerce ? le tout avec une interface agréable et sur mesure? Rencontrons-nous !</p>
+                                </div>
+                            </div>
+                            <div class="items">
+                                <div class="itemsDate">
+                                    <i class="fas fa-circle"></i>
+                                    <p class="date">2016-2018</p>
+                                </div>
                                 <div class="itemsContent">
                                     <h3 class="industry">IPC</h3>
                                     <p class="job">technico commercial</p>
@@ -112,8 +134,10 @@
                                 </div>
                             </div>
                             <div class="items">
-                                <i class="fas fa-circle"></i>
-                                <p class="date">2012-2013</p>
+                                <div class="itemsDate">
+                                    <i class="fas fa-circle"></i>
+                                    <p class="date">2012-2013</p>
+                                </div>
                                 <div class="itemsContent">
                                     <h3 class="industry">aerolia(airbus)</h3>
                                     <p class="job">technicien/riveteur cellule aéronef</p>
@@ -121,8 +145,10 @@
                                 </div>
                             </div>
                             <div class="items">
-                                <i class="fas fa-circle"></i>
-                                <p class="date">2010-2012</p>
+                                <div class="itemsDate">
+                                    <i class="fas fa-circle"></i>
+                                    <p class="date">2010-2012</p>
+                                </div>
                                 <div class="itemsContent">
                                     <h3 class="industry">Bowling de picardie</h3>
                                     <p class="job">technicien de maintenance</p>
@@ -151,7 +177,7 @@
 
                     </div>
                 </main>
-            <!-- End -->
-            </article>
+        <!-- End -->
+            </div>
         </body>
     </html>
